<resources>
    <string name="app_name">Firebase</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">EMAIL</string>
    <string name="Password">PASSWORD</string>
    <string name="Login">Login</string>
    <string name="Registro">Registro</string>
    <string name="Titulo">Labor Agenda</string>
    <string name="google_maps" templateMergeStrategy="preseve" translatable="false">AIzaSyCmqbf1mo6CvNN71DJTZp0y65W8rsTn5o8</string>
    <string name="cita">Cita</string>


</resources>