<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".ui.Login"
    app:layoutDescription="@xml/fragment_login_scene">
    <ImageView
        android:id="@+id/dial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/dialversb"
        android:contentDescription="Dialgrande"/>

    <ImageView
        android:id="@+id/dializquierda"
        android:layout_width="202dp"
        android:layout_height="175dp"
        android:contentDescription="dialmediano"
        android:src="@drawable/dialversb"
         />

    <ImageView
        android:id="@+id/dialderecha"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="Dialpeque"
        android:src="@drawable/dialversb"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="28dp" />

    <LinearLayout
        android:id="@+id/layoutpp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Titulo"
            style="@style/TextAppearance"
            android:textStyle="bold"
            />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            style="@style/TextAppearance"
            android:textColorHint="@color/backgroundSrart"
            android:background="@drawable/edito"
            android:hint="@string/Email"
            android:textStyle="bold"
            android:singleLine="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"

            />
        <EditText
            android:id="@+id/passwor"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/Password"
            android:textColorHint="@color/backgroundSrart"
            android:gravity="center_horizontal"
            android:background="@drawable/edito"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            style="@style/TextAppearance"
            android:textStyle="bold"
            android:singleLine="true"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
             />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/btnr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:elevation="8dp"
                style="@style/TextAppearance"
                android:text="@string/Registro"
                />

            <TextView
                android:id="@+id/btnlog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance"
                android:elevation="8dp"
                android:layout_marginLeft="130dp"
                android:text="@string/Login"
                />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.motion.widget.MotionLayout>